--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: AKIAQVC44NPT77XKOPYB
-        aws-secret-access-key: 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
-        aws-region: ap-south-1
+        aws-access-key-id: 
+        aws-secret-access-key: 
+        aws-region: 
 
     - name: Login to Amazon ECR
       id: login-ecr
